fully working demo (requires local Virtuoso instance)

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>LinkingLOD - Link Discovery Portal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="utf-8">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/style.css" rel="stylesheet" media="screen">
@@ -64,7 +65,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Database Group Leipzig &amp; AKSW, 2013</p>
+        <p>Created and maintained by Database Group Leipzig &amp; AKSW, 2013</p>
       </footer>
     </div> <!-- /container -->
 
