--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LinkingLOD - Link Discovery Portal - Demo</title>
+    <title>LinkingLOD - Link Discovery Portal - Vocabulary</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
     <!-- Bootstrap -->
@@ -39,10 +39,29 @@
     </div>
     
 <div style="padding-top: 100px;">
-    <div class="container">
-    <h2>Success!</h2>
-    Your mapping file has been uploaded on the triple store. Go back to the <a href="index.html">home page</a> or <a href="http://localhost:8890/sparql">query the triple store</a>.
-      <hr>
+	<div class="container" id="about">
+	
+	<h1>About LinkLion</h1><hr>
+	
+	<div class="row">
+        <div class="col-md-6">
+			<div class="centered-text"><img src="images/linklion-grey.png" border="0"></div>
+        </div>
+        <div class="col-md-6" style="padding-top: 25px;">
+			<div class="panel panel-default">
+			  <div class="panel-body">
+	        	Prof. Dr. Erhard Rahm, DBS<br/>
+	        	Dr. Axel-Cyrille Ngonga Ngomo, AKSW<br/>
+				Markus Nentwig, DBS<br/>
+				Tommaso Soru, AKSW
+			  </div>
+			</div>
+        </div>
+        
+    </div>
+	
+
+	<hr>
       <footer>
         <p class="sintony">Created and maintained by <a href="http://dbs.uni-leipzig.de" target="_blank">Database Group Leipzig</a> &amp; <a href="http://aksw.org" target="_blank">AKSW</a>, University of Leipzig, 2014</p>
       </footer>
