--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,7 +16,7 @@
     <![endif]-->
   </head>
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" id="header">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -25,9 +25,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand sintony" href="index.html">LinkingLOD</a>
+          <a class="navbar-brand sintony" href="index.html"><img src="images/linklion-icon.png" border="0"></a>
         </div>
         <div class="navbar-collapse collapse">
+	      <ul class="nav navbar-nav">
+	        <li><a class="sintony align-text" href="index.html">LinkLion</a></li>
+	        <li><a class="sintony align-text" href="start.html">Demo</a></li>
+	        <li><a class="sintony align-text" href="vocabulary.html">Vocabulary</a></li>
+	        <li><a class="sintony align-text" href="about.html">About</a></li>
+	      </ul>
         </div><!--/.navbar-collapse -->
       </div>
     </div>
@@ -35,37 +41,47 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-	<p>&nbsp;</p>
-        <h1 class="sintony-bold">Link Discovery Portal</h1>
-        <p class="sintony">Sed mattis eros at neque euismod semper. Nam faucibus rhoncus odio, sed convallis felis congue vel. Morbi condimentum nulla et risus blandit, at viverra nisi porttitor. Donec hendrerit lectus nec mi porttitor vehicula. Aliquam ante dui, rhoncus aliquam sem in, lobortis sodales odio. Vivamus sed ullamcorper sem.</p>
-        <p><a class="btn btn-primary btn-lg sintony" role="button" href="start.html">Demo &raquo;</a></p>
+		<div class="centered-text"><img src="images/linklion.png" border="0" id="logo"></div>
+        <h1 class="sintony-bold centered-text">LinkLion</h1>
+        <h4 class="sintony centered-text">A portal for link discovery.</h4>
+        <div id="buttons" class="sintony centered-text">
+        	<a class="btn btn-primary btn-lg sintony" role="button" href="start.html"><span class="glyphicon glyphicon-play-circle"></span>&nbsp;&nbsp;Start demo</a>
+        	<a class="btn btn-primary btn-lg sintony" role="button" href="vocabulary.html"><span class="glyphicon glyphicon-book"></span>&nbsp;&nbsp;View vocabulary</a>
+        </div>
       </div>
     </div>
 
     <div class="container">
-      <!-- Example row of columns
+        <h2 class="sintony centered-text">Why a central link repository?</h2>
+      <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        <div class="col-md-6">
+          <h3 class="sintony"><span class="glyphicon glyphicon-hdd"></span>&nbsp;&nbsp;Store computed links.</h3>
+          <p class="sintony">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> -->
         </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        <div class="col-md-6">
+          <h3 class="sintony"><span class="glyphicon glyphicon-check"></span>&nbsp;&nbsp;Retrieve domain-specific gold standards.</h3>
+          <p class="sintony">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> -->
        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
       </div>
- 	-->
+      <div class="row">
+        <div class="col-md-6">
+          <h3 class="sintony"><span class="glyphicon glyphicon-stats"></span>&nbsp;&nbsp;Compare different frameworks.</h3>
+          <p class="sintony">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> -->
+        </div>
+        <div class="col-md-6">
+          <h3 class="sintony"><span class="glyphicon glyphicon-link"></span>&nbsp;&nbsp;Maintain links when projects shut down.</h3>
+          <p class="sintony">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> -->
+       </div>
+      </div>
       <hr>
 
       <footer>
-        <p>Created and maintained by Database Group Leipzig &amp; AKSW, 2013</p>
+        <p class="sintony">Created and maintained by <a href="http://dbs.uni-leipzig.de" target="_blank">Database Group Leipzig</a> &amp; <a href="http://aksw.org" target="_blank">AKSW</a>, University of Leipzig, 2014</p>
       </footer>
     </div> <!-- /container -->
 
