fixed #17 + some on mapping processor

--- a/src/main/webapp/success.html
+++ b/src/main/webapp/success.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LinkingLOD - Link Discovery Portal - Demo</title>
+    <title>Upload mapping | LinkLion - A portal for link discovery.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
     <!-- Bootstrap -->
