--- a/src/main/webapp/vocabulary.html
+++ b/src/main/webapp/vocabulary.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LinkingLOD - Link Discovery Portal - Vocabulary</title>
+    <title>Vocabulary | LinkLion - A portal for link discovery.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
     <!-- Bootstrap -->
@@ -155,7 +155,7 @@
 		  </div>
 		  <div class="panel-body">Insert description here.</div>
 		  <table class="table">
-		    <tr><th>URI<td><a href="http://www.linklion.org/ontology#parameters" target="_blank">http://www.linklion.org/ontology#parameters</a>
+		    <tr><th>URI<td><a href="http://www.linklion.org/ontology#storedAt" target="_blank">http://www.linklion.org/ontology#storedAt</a>
 		    <tr><th>type<td>Property
 		    <tr><th>domain<td><a href="http://www.linklion.org/ontology#Mapping" target="_blank">http://www.linklion.org/ontology#Mapping</a>
 		    <tr><th>range<td><a href="http://www.w3.org/2001/XMLSchema#anyURI" target="_blank">http://www.w3.org/2001/XMLSchema#anyURI</a>
