--- a/src/main/webapp/start.html
+++ b/src/main/webapp/start.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LinkingLOD - Link Discovery Portal - Demo</title>
+    <title>Upload mapping | LinkLion - A portal for link discovery.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
     <!-- Bootstrap -->
@@ -43,8 +43,8 @@
 		<h1>LinkLion Demo</h1><hr>
 		
 		<ul class="nav nav-tabs">
-		  <li class="active"><a href="#">Upload mapping</a></li>
-		  <!-- <li><a href="#">View</a></li> -->
+		  <li class="active"><a href="javascript:void(0);">Upload mapping</a></li>
+		  <!-- <li><a href="javascript:void(0);">View</a></li> -->
 		</ul>
 	  </div>
 	<div class="container" style="padding-top: 20px;">
@@ -83,9 +83,9 @@
 		    <span class="sr-only">Toggle Dropdown</span>
 		  </button>
 		  <ul class="dropdown-menu" role="menu">
-		    <li role="presentation"><a href="#" onclick='$("#selected-framework").html($(this).html()); new_framework(false); check();'>Generic Framework</a></li>
+		    <li role="presentation"><a href="javascript:void(0);" onclick='$("#selected-framework").html($(this).html()); new_framework(false); check();'>Generic Framework</a></li>
 		    <li role="presentation" class="divider"></li>
-		    <li role="presentation"><a href="#" onclick='$("#selected-framework").html($(this).html()); new_framework(true); check();'><i>Add new framework</i></a></li>
+		    <li role="presentation"><a href="javascript:void(0);" onclick='$("#selected-framework").html($(this).html()); new_framework(true); check();'><i>Add new framework</i></a></li>
 		  </ul>
 			&nbsp;
 			<span class='label label-info' id="selected-framework"></span>
@@ -120,9 +120,9 @@
 		    <span class="sr-only">Toggle Dropdown</span>
 		  </button>
 		  <ul class="dropdown-menu" role="menu">
-		    <li role="presentation"><a href="#" onclick='$("#selected-algorithm").html($(this).html()); new_algorithm(false); check();'>Generic Algorithm</a></li>
+		    <li role="presentation"><a href="javascript:void(0);" onclick='$("#selected-algorithm").html($(this).html()); new_algorithm(false); check();'>Generic Algorithm</a></li>
 		    <li role="presentation" class="divider"></li>
-		    <li role="presentation"><a href="#" onclick='$("#selected-algorithm").html($(this).html()); new_algorithm(true); check();'><i>Add new algorithm</i></a></li>
+		    <li role="presentation"><a href="javascript:void(0);" onclick='$("#selected-algorithm").html($(this).html()); new_algorithm(true); check();'><i>Add new algorithm</i></a></li>
 		  </ul>
 			&nbsp;
 			<span class='label label-info' id="selected-algorithm"></span>
@@ -135,10 +135,12 @@
 			  <span class="input-group-addon">Name</span>
 			  <input name="new-algorithm-name" type="text" class="form-control" placeholder="New Algorithm">			  		  
 			</div>
+			<!-- not used
 			<div class="input-group">
 			  <span class="input-group-addon">Version</span>
 			  <input name="new-algorithm-version" type="text" class="form-control" placeholder="1.0">			  		  
 			</div>
+			-->
 			<div class="input-group">
 			  <span class="input-group-addon">URL</span>
 			  <input name="new-algorithm-url" type="text" class="form-control" placeholder="http://new-algorithm.org">			  		  
