--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,7 +30,8 @@
         <div class="navbar-collapse collapse">
 	      <ul class="nav navbar-nav">
 	        <li><a class="sintony align-text" href="index.html">LinkLion</a></li>
-	        <li><a class="sintony align-text" href="start.html">Demo</a></li>
+			<li><a class="sintony align-text" href="start.jsp">Start</a></li>
+			<li><a class="sintony align-text" href="browse.jsp">Browse</a></li>
 	        <li><a class="sintony align-text" href="vocabulary.html">Vocabulary</a></li>
 	        <li><a class="sintony align-text" href="about.html">About</a></li>
 	      </ul>
@@ -45,7 +46,8 @@
         <h1 class="sintony-bold centered-text">LinkLion</h1>
         <h4 class="sintony centered-text">A portal for link discovery.</h4>
         <div id="buttons" class="sintony centered-text">
-        	<a class="btn btn-primary btn-lg sintony" role="button" href="start.html"><span class="glyphicon glyphicon-play-circle"></span>&nbsp;&nbsp;Start demo</a>
+        	<a class="btn btn-primary btn-lg sintony" role="button" href="start.jsp"><span class="glyphicon glyphicon-play-circle"></span>&nbsp;&nbsp;Start</a>
+        	<a class="btn btn-primary btn-lg sintony" role="button" href="browse.jsp"><span class="glyphicon glyphicon-globe"></span>&nbsp;&nbsp;Browse</a>
         	<a class="btn btn-primary btn-lg sintony" role="button" href="vocabulary.html"><span class="glyphicon glyphicon-book"></span>&nbsp;&nbsp;View vocabulary</a>
         </div>
       </div>
