--- a/src/main/webapp/success.html
+++ b/src/main/webapp/success.html
@@ -25,14 +25,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand sintony" href="index.html"><img src="images/linklion-icon.png" border="0"></a>
+          <a class="navbar-brand sintony" href="index.jsp"><img src="images/linklion-icon.png" border="0"></a>
         </div>
         <div class="navbar-collapse collapse">
 	      <ul class="nav navbar-nav">
-	        <li><a class="sintony align-text" href="index.html">LinkLion</a></li>
+	        <li><a class="sintony align-text" href="index.jsp">LinkLion</a></li>
 			<li><a class="sintony align-text" href="start.jsp">Start</a></li>
 			<li><a class="sintony align-text" href="browse.jsp">Browse</a></li>
 	        <li><a class="sintony align-text" href="vocabulary.html">Vocabulary</a></li>
+	        <li><a class="sintony align-text" target="_blank" href="http://www.linklion.org:8890/sparql">SPARQL</a></li>
 	        <li><a class="sintony align-text" href="about.html">About</a></li>
 	      </ul>
         </div><!--/.navbar-collapse -->
@@ -42,7 +43,7 @@
 <div style="padding-top: 100px;">
     <div class="container">
     <h2>Success!</h2>
-    Your mapping file has been uploaded on the triple store. Go back to the <a href="index.html">home page</a> or <a href="http://localhost:8890/sparql">query the triple store</a>.
+    Your mapping file has been uploaded on the triple store. Go back to the <a href="index.jsp">home page</a> or <a href="http://localhost:8890/sparql">query the triple store</a>.
       <hr>
       <footer>
         <p class="sintony">Created and maintained by <a href="http://dbs.uni-leipzig.de" target="_blank">Database Group Leipzig</a> &amp; <a href="http://aksw.org" target="_blank">AKSW</a>, University of Leipzig, 2014</p>
