fixed #3, fixed #29, fixed #32

--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -30,7 +30,7 @@
         <div class="navbar-collapse collapse">
 	      <ul class="nav navbar-nav">
 	        <li><a class="sintony align-text" href="index.jsp">LinkLion</a></li>
-			<li><a class="sintony align-text" href="start.jsp">Start</a></li>
+			<li><a class="sintony align-text" href="start.jsp">Upload</a></li>
 			<li><a class="sintony align-text" href="browse.jsp">Browse</a></li>
 	        <li><a class="sintony align-text" href="vocabulary.html">Vocabulary</a></li>
 	        <li><a class="sintony align-text" target="_blank" href="http://www.linklion.org:8890/sparql">SPARQL</a></li>
@@ -46,16 +46,19 @@
 	<h1>About LinkLion</h1><hr>
 	
 	<div class="row">
-        <div class="col-md-6">
-			<div class="centered-text"><img src="images/linklion-grey.png" border="0"></div>
-        </div>
-        <div class="col-md-6" style="padding-top: 25px;">
+        <div class="col-md-6 col-md-offset-3 centered-text">
+        	<div class="centered-text" style="margin-top: 10px;"><img src="images/linklion-grey.png" border="0"></div>
+			<div class="panel panel-default" style="margin-top: 25px;">
+			  <div class="panel-body" style="text-align: left;">
+			    LinkLion.org is part of the <a target="_blank" href="http://aksw.org/Projects/LinkingLOD.html">LinkingLOD Project</a> which is funded by the German Research Foundation (Deutsche Forschungsgemeinschaft DFG).
+			  </div>
+			</div>
 			<div class="panel panel-default">
-			  <div class="panel-body">
-	        	Prof. Dr. Erhard Rahm, DBS<br/>
-	        	Dr. Axel-Cyrille Ngonga Ngomo, AKSW<br/>
-				Markus Nentwig, DBS<br/>
-				Tommaso Soru, AKSW
+			  <div class="panel-body" style="text-align: left;">
+	        	<a target="_blank" href="http://dbs.uni-leipzig.de/en/person/rahm">Prof. Dr. Erhard Rahm</a>, DBS<br/>
+	        	<a target="_blank" href="http://aksw.org/AxelNgonga">Dr. Axel-Cyrille Ngonga Ngomo</a>, AKSW<br/>
+				<a target="_blank" href="http://dbs.uni-leipzig.de/person/markus_nentwig">Markus Nentwig</a>, DBS<br/>
+				<a target="_blank" href="http://aksw.org/TommasoSoru">Tommaso Soru</a>, AKSW
 			  </div>
 			</div>
         </div>
