--- a/src/main/webapp/vocabulary.html
+++ b/src/main/webapp/vocabulary.html
@@ -30,7 +30,7 @@
         <div class="navbar-collapse collapse">
 	      <ul class="nav navbar-nav">
 	        <li><a class="sintony align-text" href="index.jsp">LinkLion</a></li>
-			<li><a class="sintony align-text" href="start.jsp">Start</a></li>
+			<li><a class="sintony align-text" href="start.jsp">Upload</a></li>
 			<li><a class="sintony align-text" href="browse.jsp">Browse</a></li>
 	        <li><a class="sintony align-text" href="vocabulary.html">Vocabulary</a></li>
 	        <li><a class="sintony align-text" target="_blank" href="http://www.linklion.org:8890/sparql">SPARQL</a></li>
