--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -50,7 +50,14 @@
         	<div class="centered-text" style="margin-top: 10px;"><img src="images/linklion-grey.png" border="0"></div>
 			<div class="panel panel-default" style="margin-top: 25px;">
 			  <div class="panel-body" style="text-align: left;">
-			    LinkLion.org is part of the <a target="_blank" href="http://aksw.org/Projects/LinkingLOD.html">LinkingLOD Project</a> which is funded by the German Research Foundation (Deutsche Forschungsgemeinschaft DFG). The LinkLion Portal source code can be found at the <a href="https://github.com/AKSW/LinkingLodPortal" target="_blank">project page on GitHub</a>.
+			    LinkLion is an open-source central repository for the storage of links among resources in the <a href="http://lod-cloud.net/" target="_blank">Linked Open Data</a> web.
+			    The main goal of LinkLion is to facilitate the publication, retrieval and use of links between knowledge bases.
+				Our repository thus provides dedicated functionality for the upload, storage, querying and download or large sets of links.
+			  </div>
+			</div>
+			<div class="panel panel-default" style="margin-top: 25px;">
+			  <div class="panel-body" style="text-align: left;">
+			    LinkLion is part of the <a target="_blank" href="http://aksw.org/Projects/LinkingLOD.html">LinkingLOD Project</a> which is funded by the German Research Foundation (Deutsche Forschungsgemeinschaft DFG). The LinkLion Portal source code can be found at the <a href="https://github.com/AKSW/LinkingLodPortal" target="_blank">project page on GitHub</a>.
 			  </div>
 			</div>
 			<div class="panel panel-default">
