--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -52,7 +52,7 @@
 			  <div class="panel-body" style="text-align: left;">
 			    LinkLion is an open-source central repository for the storage of links among resources in the <a href="http://lod-cloud.net/" target="_blank">Linked Open Data</a> web.
 			    The main goal of LinkLion is to facilitate the publication, retrieval and use of links between knowledge bases.
-				Our repository thus provides dedicated functionality for the upload, storage, querying and download or large sets of links.
+				Our repository thus provides dedicated functionality for the upload, storage, querying and download of large sets of links.
 			  </div>
 			</div>
 			<div class="panel panel-default" style="margin-top: 25px;">
